some styling fixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,15 +9,17 @@
 <body>
     <div class="container">
         <h1>כמה קילו?</h1>
-        <h2>מחשבון ברביקיו</h2>
+        <h2>מחשבון בשרים ל"על האש"</h2>
         <form id="bbqForm">
-            <div class="form-group">
-                <label for="adults">מבוגרים:</label>
-                <input type="number" id="adults" name="adults" min="0" value="8" required>
-            </div>
-            <div class="form-group">
-                <label for="kids">ילדים:</label>
-                <input type="number" id="kids" name="kids" min="0" value="4" required>
+            <div class="form-group-group">
+                <div class="form-group" id="form-group-adult">
+                    <label for="adults">מבוגרים:</label>
+                    <input type="number" id="adults" name="adults" min="0" value="8" required>
+                </div>
+                <div class="form-group" id="form-group-children">
+                    <label for="kids">ילדים:</label>
+                    <input type="number" id="kids" name="kids" min="0" value="4" required>
+                </div>
             </div>
             <div class="form-group">
                 <label for="hungerLevel">רמת רעב:</label>
