adding event type logic

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,15 @@
                     <option value="light">קל</option>
                     <option value="moderate" selected>בינוני</option>
                     <option value="veryHungry">רעב מאוד</option>
+                    <option value="allYouCanEat">אכול כפי יכולתך</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="eventType">אופי האירוע:</label>
+                <select id="eventType" name="eventType" required>
+                    <option value="premium">פרימיום</option>
+                    <option value="standard" selected>סטנדרטי</option>
+                    <option value="costEffective">משתלם כלכלית</option>
                 </select>
             </div>
             <div class="form-group">
