--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
                 <select id="meatPreferences" name="meatPreferences" multiple required>
                 </select>
             </div>
-            <button type="button" onclick="calculateMeat()">חשב כמויות</button>
+            <button type="button" id="calcButton" onclick="calculateMeat()">חשב כמויות</button>
         </form>
         <div id="results"></div>
         <div id="totalMeat"></div>
