--- a/static/style.css
+++ b/static/style.css
@@ -91,15 +91,6 @@ input[type="range"] {
     margin-top: 10px;
 }
 
-#copyButton {
-    margin-top: 10px;
-}
-
-#copyMessage {
-    margin-top: 5px;
-    color: green; /* Change color to your preference */
-}
-
 #buttonContainer {
     margin-top: 10px;
     display: flex;
@@ -162,4 +153,84 @@ footer a:hover {
 
 .icon-button:hover {
     color: #007bff; /* Adjust hover color as needed */
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.overlay-content {
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 8px;
+    width: 90%;
+    max-width: 500px;
+    min-height: 120px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    position: relative;
+}
+
+.close-button {
+    float: left;
+    background: none;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+#reportForm {
+    margin-top: 16px;
+    margin-right: 24px;
+    display: flex;
+    flex-direction: column;
+}
+
+#reportForm label {
+    margin-bottom: 8px;
+}
+
+#reportForm textarea {
+    resize: none;
+    margin-bottom: 16px;
+    padding: 8px;
+    font-size: 16px;
+    width: 100%;
+    box-sizing: border-box;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+}
+
+#reportForm button {
+    padding: 10px 15px;
+    font-size: 16px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#reportForm button:hover {
+    background-color: #0056b3;
+}
+
+#confirmationMessage {
+    text-align: center;
+    margin-top: 36px;
+    margin-left: 24px;
+    margin-right: 24px;
+    font-size: 1.2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
