--- a/static/style.css
+++ b/static/style.css
@@ -188,8 +188,7 @@ footer a:hover {
 }
 
 #reportForm {
-    margin-top: 16px;
-    margin-right: 24px;
+    margin: 24px;
     display: flex;
     flex-direction: column;
 }
@@ -233,4 +232,50 @@ footer a:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+/* Ensure the dropdown takes full width */
+select {
+    width: 100%; 
+    padding: 10px;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+    border: 1px solid #ccc; 
+    border-radius: 5px;
+    appearance: none; 
+    -webkit-appearance: none; 
+    -moz-appearance: none; 
+    background: url('data:image/svg+xml;charset=US-ASCII,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20"><polygon points="0,0 20,0 10,10" fill="#333"/></svg>') no-repeat right 10px center;
+    background-size: 10px; 
+    direction: rtl; 
+    text-align: right; 
+}
+
+#reportForm input[type="checkbox"] {
+    margin-right: 10px;
+}
+
+#reportForm textarea {
+    resize: none;
+    margin-bottom: 16px;
+    padding: 8px;
+    font-size: 16px;
+    width: 100%;
+    box-sizing: border-box;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+}
+
+#reportForm button {
+    padding: 10px 15px;
+    font-size: 16px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#reportForm button:hover {
+    background-color: #0056b3;
 }
