--- a/static/style.css
+++ b/static/style.css
@@ -180,7 +180,9 @@ footer a:hover {
 }
 
 .close-button {
-    float: left;
+    position: absolute;
+    top: 10px;
+    left: 10px;
     background: none;
     border: none;
     font-size: 24px;
