some fixes from the crowd

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,10 +44,10 @@
             <div class="form-group">
                 <label for="hungerLevel">רמת רעב:</label>
                 <select id="hungerLevel" name="hungerLevel" required>
-                    <option value="light">קל</option>
-                    <option value="moderate" selected>בינוני</option>
-                    <option value="veryHungry">רעב מאוד</option>
-                    <option value="allYouCanEat">אכול כפי יכולתך</option>
+                    <option value="light">קל (150 גרם לאדם)</option>
+                    <option value="moderate" selected>בינוני (250 גרם לאדם)</option>
+                    <option value="veryHungry">רעב מאוד (450 גרם לאדם)</option>
+                    <option value="allYouCanEat">אכול כפי יכולתך (700 גרם לאדם)</option>
                 </select>
             </div>
             <div class="form-group">
@@ -59,7 +59,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="meatPreferences">העדפות בשר:</label>
+                <label for="meatPreferences">סוגי בשר:</label>
                 <select id="meatPreferences" name="meatPreferences" multiple required>
                 </select>
             </div>
