--- a/static/style.css
+++ b/static/style.css
@@ -183,6 +183,7 @@ footer a:hover {
     position: absolute;
     top: 10px;
     left: 10px;
+    padding: 0px;
     background: none;
     border: none;
     font-size: 24px;
